--- a/style.css
+++ b/style.css
@@ -1,27 +1,47 @@
-body {
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
     background-color: rgb(175, 165, 150);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.board {
+    margin: 0;
+    min-height: 100vh;
+    font-family: sans-serif;
+  }
+  
+  h1 {
+    margin-bottom: 20px;
+  }
+  
+  .reset-btn {
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+  }
+  
+  .board {
     background-color: aliceblue;
-    display: grid;
     border: 20px solid rgb(120, 4, 4);
-    margin: 40px;
-    min-width: 50%;
-}
-
-.board > div {
-    border: 1px solid black;
-    display: grid;
-    grid-template-columns: auto auto auto;
-}
-
-.board > div > div {
-    width: 100%;
-    padding-top: 100%;
-    border: 1px solid black;
-}
+    width: 90vmin;
+  }
+  
+  .row {
+    display: flex;
+  }
+  
+  /* Each cell inside a row */
+  .row > div {
+    flex: 1;                       
+    border: 1px solid black;      
+    aspect-ratio: 1 / 1;          
+    display: flex;                
+    align-items: center;          
+    justify-content: center;      
+    font-size: 7rem;              
+  }
+  
